<resources>
    <string name="app_name">APNAOPD</string>

    <string-array name="login_as">
        <item>Doctor</item>
        <item>Patient</item>
        <item>Pathologist</item>
        <item>Pharmasuticals</item>
        <item>Admin</item>
    </string-array>
    <string name="server_client_id">107539492045-rncab6tmo7qi4ns0f5fo7dpibgt2s16n.apps.googleusercontent.com</string>
    <string name="client_secret">Z5UoPLahoNC7c0VeprEL7Ohu</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="problem">Your Current Problem...</string>
    <string name="accident">Accident and Type...</string>
    <string name="fever">Fever</string>
    <string name="file_upload">Choose File</string>
    <string name="upload_report">Upload Report  : </string>
    <string name="submit">Submit</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="fee">Fee</string>
    <string name="fee_value">Fee Value</string>
    <string name="availability">Availability</string>
    <string name="pulse">Pulse :</string>
    <string name="upload_picture">Upload Pictue :</string>
    <string name="private_parts">(Do not show private parts)</string>
    <string name="miscellaneous">Miscellaneous :</string>
    <string name="other">Other :</string>
    <string name="condition">Condition :</string>
    <string name="rhythm">Rhythm :</string>
    <string name="neck_veins">Neck Veins :</string>
    <string name="chest_pain">Chest Pain :</string>
    <string name="respiration">Respiration :</string>
    <string name="bleeding">Bleeding :</string>
    <string name="general_survey">General Survey :</string>
    <string name="genitourinary">Genitourinary :</string>
    <string name="behavioural_abnormality">Behavioural Abnormality :</string>
    <string name="sensational_abnormality">Sensational Abnormality :</string>
    <string name="habit">Habit :</string>
    <string name="habitat">Habitat :</string>
    <string name="emotional_status">Emotional Status :</string>
    <string name="pain">Pain :</string>
    <string name="vomiting">Vomiting :</string>
    <string name="site_of_problem">Site of Problem :</string>
    <string name="comment">Complain in words :</string>
    <string name="select_department">Select Department :</string>
    <string name="submit_report_message">Please wait while your report is being submitted.</string>
    <string name="dialog_wait">Please wait</string>
    <string name="send_error">There was an Error submitting your response!</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="fees">Fees</string>
    <string name="date">Date</string>
    <string name="city">City</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="ttime">Time</string>
    <string name="info">Touch For more Info</string>
    <string name="manage_time_slabs">Manage Time-Slabs</string>
    <string name="view_appointments">Upcoming Appointments</string>
    <string name="add">Add</string>
    <string name="set_default">Set Default</string>
    <string name="available_slots">Available Slots</string>
    <string name="select_all">Select All</string>
    <string name="clear_all">Clear All</string>
    <string name="medicine_desc">See all your medical records and casesheets here</string>
    <string name="order_medicine_desc">Purchase medicines from medical stores near you</string>
    <string name="appointment_desc">Schedule appointment with APNAOPD register doctors across India</string>
    <string name="med_presc">Recieve prescriptions from all medical buyers near you</string>
    <string name="confirmed_orders">Confirmed Orders</string>
    <string name="det_con_ord">Medicine orders confirmed by customers whom you offerd</string>
    <string name="take_doctor_s_appointment">Take Doctor\'s Appointment</string>
    <string name="order_medicine">Order Medicine</string>
    <string name="medical_records">Medical Records</string>


    <!--  STATE   -->
    <string-array name="state">

        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>

    </string-array>
    <string name="title_activity_orders">Orders</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_order">OrderActivity</string>

</resources>
